@@ -109,7 +109,11 @@ Optimizations
 
 ======================= Lucene 7.5.0 =======================
 
-(No changes)
+Bug Fixes:
+
+ * LUCENE-8164: IndexWriter silently accepts broken payload. This has been fixed
+   via LUCENE-8165 since we are now checking for offset+length going out of bounds.
+   (Robert Muir, Nhat Nyugen, Simon Willnauer)
 
 ======================= Lucene 7.4.0 =======================
 
